# bk_star

./: .env  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  main.py  pyproject.toml
backend/config/: database.py  setting.py
backend/core/: api.py
backend/core/endpoints/: category.py  post.py  test.py
backend/db/: sql_create_table.sql
backend/models/: base.py  category.py  post.py
backend/schemas/: base.py  category.py  post.py
backend/utils/: auth.py  db.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/components/: Banner.vue  Footer.vue  Header.vue  index.js
frontend/src/components/SubCategory/: index.vue
frontend/src/components/SubPost/: index.vue
frontend/src/components/admin/: Header.vue
frontend/src/components/admin/AdminSubPost/: index.vue
frontend/src/plugins/: axios.js  index.js
frontend/src/router/: index.js
frontend/src/utils/: endpoints.js  index.js  urlPath.js
frontend/src/views/: AboutView.vue  HomeView.vue  NewsView.vue
frontend/src/views/admin/: HomeView.vue
frontend/src/views/admin/Category/: form.vue  list.vue
frontend/src/views/admin/Posts/: create.vue  form.vue  list.vue
frontend/src/views/client/: CourseView.vue  HomeView.vue  ListPosts.vue  NewsView.vue  PostsDetail.vue
src/components/: Footer.vue  Header.vue
src/views/: AboutView.vue  NewsView.vue
